<resources>
    <string name="app_name">Texuino</string>
    <string name="action_settings">Settings</string>

    <string name="help_1">• Pull out the options menu by swiping from the left of the screen.</string>
    <string name="help_2">• Use the personalise menu to rename the switches and inputs to whatever you have linked them to.</string>
    <string name="help_3">• Interupts work like inputs but can also be used to trigger events (see firmware source).</string>
    <string name="help_4">• The icon in the middle denotes connection status (glowing = connected).</string>
    <string name="help_5">• Need more help? Email stfneur@gmail.com.</string>
    <string name="about_content">Designed to be used with Texuino automation board. More information and link to buy can be found at: www.twitter.com/texuino. For support email stfneur@gmail.com.</string>

    <string name="toggle_alerts">Alerts</string>
    <string name="all_relay_off">Disconnect = All Relays Off?</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="user_input_heading">Enter value/:</string>
</resources>
